More tests for upgrading